Fixed: left item of the pill getting covered by background image element

--- a/src/App.css
+++ b/src/App.css
@@ -388,7 +388,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   position: absolute;
   bottom: 0;
   width: 40%;
-  z-index: -4;
+  z-index: -1;
   left: 0;
 }
 
@@ -422,6 +422,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 .project .nav.nav-pills .nav-item {
   width: 33.33333%;
+  z-index: 10;
 }
 .project .nav.nav-pills .nav-link {
   background-color: transparent;
